fix text overflow with long words

--- a/ui/app/styles/components/notifications.scss
+++ b/ui/app/styles/components/notifications.scss
@@ -42,5 +42,10 @@
         opacity: 0;
       }
     }
+    // Overrides for the flash-messages content
+    .pds-popup__header {
+      overflow-wrap: anywhere;
+      word-break: break-word;
+    }
   }
 }
